--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^2.27.0
   google_sign_in: ^6.2.1
   firebase_auth: ^4.17.8
+  firebase_database: ^10.4.9
   
 
 dev_dependencies:
